+Fixed design for all modals to fit on mobile and desktop

--- a/src/app/dialogs/delete/delete.dialog.scss
+++ b/src/app/dialogs/delete/delete.dialog.scss
@@ -1,9 +1,24 @@
-.container {
+:host {
+  width: 100%;
+  height: 100%;
+  min-height: inherit;
+  max-height: inherit;
+  display: block;
+
+  .container {
     display: flex;
     flex-direction: column;
-  }
-  
-  .container > * {
     width: 100%;
+    height: 100%;
+    min-height: inherit;
+
+    // .delete-info {
+    //   max-height: 50vh;
+    // }
+
+    textarea {
+      min-height: 100px;
+      max-height: 13em;
+    }
   }
-  
+}
