--- a/src/app/dialogs/edit/edit.dialog.scss
+++ b/src/app/dialogs/edit/edit.dialog.scss
@@ -1,20 +1,3 @@
-::ng-deep.mat-dialog-container {
-  max-height: 100%;
-}
-
-::ng-deep.mat-dialog-content {
-  min-height: inherit;
-  height: 100%;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-between;
-}
-
-::ng-deep.mat-dialog-actions {
-  padding: 0px;
-  margin: 0px;
-}
-
 :host {
   width: 100%;
   height: 100%;
@@ -35,7 +18,7 @@
 
     textarea {
       min-height: 100px;
-      max-height: 500px;
+      max-height: 13em;
     }
   }
 }
